# dragon_email_agent

./: BEGINNER_GUIDE.txt  CONNECTION_STATUS.md  FIX_CONNECTION.md  GETTING_STARTED.md  HOW_TO_RUN.md  INSTALL.txt  QUICK_START.md  README.md  __init__.py  main.py  main_fixed.py  pyproject.toml  requirements.txt  requirements_simple.txt  requirements_working.txt  setup.py  setup_emails.py  start.sh  sync_emails.py
analytics/: __init__.py
api/: __init__.py
automation/: __init__.py
config/: email_accounts.json  email_config.yaml
core/: __init__.py
data/: dragon_email.db
database/: __init__.py
dragon_email_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
email_engine/: __init__.py
integrations/: __init__.py
memory/: __init__.py
rag/: __init__.py
security/: __init__.py
utils/: __init__.py
voice/: __init__.py
