[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-email-agent"
version = "1.0.0"
description = "Project Dragon - Ultimate Email AI Agent"
authors = [{name = "Project Dragon Team"}]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
voice = ["SpeechRecognition>=3.10.0", "pyttsx3>=2.90"]
chromadb = ["chromadb>=0.4.0"]
security = ["cryptography>=41.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "database*", "email_engine*", "voice*", "memory*", "rag*", "security*", "automation*", "analytics*", "integrations*", "api*", "utils*"]